JEDIT VERSION HISTORY

* Version 2.3pre1

+ Enhancements

- 'Expand Abbreviation' renamed to 'Complete Word' -- old name was a bit
  confusing
- Pressing '}' now only reindents the line in C derived modes (C++, Java, etc)
- Changes to the key bindings take effect immediately; no need to restart
- Shortcuts option pane split into 'command shortcuts' and 'macro
  shortcuts' option panes
- View status bar code improvements
- New methods in MiscUtilities class: charsToEscapes() and escapesToChars()
- Cancelling a 'save as' when exiting from jEdit now aborts the exit
- Regexps are only longer compiled once in a multifile search; this should
  make things faster when regexps are enabled

+ Bug Fixes

- Geometry fix from in 2.2final backed out -- it caused problems for some
  people

* Version 2.2final

Syntax package is now GPL'd again. When we LGPL'd it, jEdit had no IDE
features, so it was natural to let commercial IDEs use it; after all, we
weren't competing. Now that a range of plugins are being written for
jEdit which give it IDE-like functionality, we were basically giving the
competition a free ride.

jEdit 2.1 and 2.0 are still available on the net, and they have LGPL'd
syntax packages. So closed-source programs can still use the older code.

+ New Features

- PHP3 mode added (Clancy Malcolm)

+ Enhancements

- jEdit now ignores ^Z (0x1a) characters at the end of files. DOS-derived
  operating systems (Windows, OS/2) sometimes append these characters to
  text files
- New template.jmk (Mike Dillon)
- Existing help viewer windows are reused, instead of new windows being
  opened all the time
- Documentation updates
- Minor change to the geometry loading code, windows should be positioned
  better

+ Bug Fixes

- It was possible to undo the initial file load, which could leave you
  with an empty buffer (since 2.2pre8)
- Only text area actions were recorded to macros (since 2.2pre7)
- Macro recording had problems with the new delayed-loading buffer code