@@ -2,32 +2,21 @@ JEDIT TO DO
 
 ------- Stuff for 2.3pre1 -------
 
-+ Cleanups / Fixes
-
-- CaretUndo acts weird on 'redo' sometimes
-
-+ Features
-
-- Before releasing pre1, disable abbrevs by default as not to
-  confuse users
-
 - Better ignore case/regexp/multifile options icons
-
+- Create window-editor-quicksearch screenshot
 - Edit abbrevs in global options
-
 - Document static abbrevs
-
-- Integrate BufferTabs into the core
-
-- Integrate Mike Dillon's "Gutter" code, rename TextAreaPainter.Highlight
-  to TextAreaHighlight and use that same interface to paint stuff in the
-  gutter
-
-- Write an InputHandler subclass that displays the current repeat count,
-  if any, in the view's status bar
+- Retake all docs snapshots with the sawmill window manager
 
 ------- After 2.3pre1 -------
 
+- Integrate BufferTabs into the core
+- Write an InputHandler subclass that displays the current repeat count,
+  if any, in the view's status bar
+- CaretUndo acts weird on 'redo' sometimes
+- Integrate Mike Dillon's "Gutter" code, rename TextAreaPainter.Highlight
+  to TextAreaHighlight and use that same interface to paint stuff in the
+  gutter
 - (??? WHY?) Higlight.paintHighlight(): instead of passing y co-ordinate,
   pass a rectangle with line bounds. Maybe rework TextAreaPainter internals
   to use a rectangle also, it could simplify some things. If one rectangle
@@ -40,7 +29,6 @@ JEDIT TO DO
   can be used to color PHP, ASP, VBScript, etc in addition to JavaScript
 - Macros -- \n, \t in action command, indent-on-enter/-tab record themselves
   as insert-char@\n and @\t if disabled
-- Buttons on tool bar for ignore case, regexp, multifile options
 - 'Uncomment' command, removes comment strings from selected text
 - Bookmarks and history window in help viewer
 - context-sensitive edit modes - Buffer.getMode(int line) method. For example,
